# pol

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  Dockerfile  Dockerfile.celery  Dockerfile.cron  Dockerfile.spider  LICENSE  Pipfile  a.sh  alembic.ini  holiday_parser.py  lint.sh  main.py  my_calendar.py  nginx.conf  pyproject.toml  pytest.ini  readme.md  renovate.json  requirements.txt  scrapy.cfg  setup.cfg  tests.py
.ci/: azure-pipelines.yaml  azure-pipelines.yml
.ci/composes/: docker-compose.yaml
.ci/templates/jobs/: build-docker.yaml  build-docs.yaml  docker.yaml  (+4 more)
.circleci/: config.yml  export_requirements.py  hash_requirement_files.py
.dependabot/: config.yml
.docker/: Dockerfile  cron.in  entrypoint.sh  server.in  spider.in  worker.in
.github/: renovate.json
.github/workflows/: docker-release.yaml  misspell.yml  pythonpackage.yml  sentry.yaml  update-pre-commit.yaml
app/: __init__.py  __main__.py  app.py  client.py  config.py  conftest.py  depends.py  fast.py  holiday_parser.py  log.py  main.py  make_ics.py  md2bbc.py  models.py  not_test_worker.py  openInSafari.html  requirements.txt  res.py  responses.py  send_mail.py  test_base_router.py  test_depends.py  test_markdown_2_bbcode.py  test_worker.py  views.py  worker.py
app/aio_services/: __init__.py  exceptions.py  test_bgm_tv.py  utils.py
app/api/: __init__.py  app.py
app/core/: celery_app.py  config.py
app/curd/: __init__.py  map.py  subject.py  user_token.py
app/db/: database.py  depends.py  init_db.py  mysql.py  redis.py  utils.py
app/db_models/: __init__.py  base.py  bilibili.py  iqiyi.py  log.py  map.py  relation.py  sa.py  sa_old.py  subject.py  tag.py  timeline.py  topic.py
app/deprecation/: __init__.py  make_ics.py
app/log/: __init__.py  base.py  formatter.py  handler.py  new_sink.py  sink.py
app/lua/: get_session_and_extend_ttl.lua
app/middlewares/: base.py  http.py  log.py  sentry.py  test_base.py
app/models/: __init__.py  bangumi_source.py  map.py  relation.py  response.py  subject.py  subject_type.py
app/sdu_bkjws/: __init__.py
app/services/: test_bgm_tv.py
app/templates/: calendar.html  index.html  login.html  menu.html  scores.html  unlogin.html
app/utils/: calendar.py  fetch.py
app/video_website_spider/: 102932.json  __init__.py  base.py  bilibili.py  iqiyi.py  test_bilibili.py  test_iqiyi.py
bgm_tv_spider/: clear.sql  generate_wiki_start_url.py  generator_start_url.py  items.py  middlewares.py  models.py  myTypes.py  pipelines.py  settings.py
bgm_tv_spider/spiders/: bgm_tv.py  bgm_tv_subject_api.py  bgm_tv_wiki.py  rakuen.py  redis_bgm_tv.py
config/: nginx.conf
cron/: daemon.py  generate_full_url.py  generate_wiki_start_url.py  generate_wiki_url.py  generator_start_url.py  re_calculate_map.py  timeline_spider.py
data_cleaner/: main.py  migrate.py
data_manager/: a.py  app.py  app_x.py  b.py  bilibili-spider.py  f.py  h.py  patch.json  re_calculate_map.py  save_patch_and_bangumi_data_to_db.py  save_patch_to_bangumi_data.py  write_patch_back_to_bangumi_data.py
data_manager/models/: bangumi_data.py
docs/: live.py  readme.md  requirements.txt
docs/source/: auth.rst  conf.py  index.rst  not-developer.rst  player_url.rst
etc/: gunicorn.py  test_gunicorn_conf.py
migrations/: env.py
migrations/versions/: 0024bccd85ae_remove_bgm_timeline.py  0195b3979370_remove_map.py  07e35f39f114_init.py  17c933a401e2_init.py  36351ca94db8_init.py  4ac6afa0aec2_remove_table.py  5ae2c65a3059_add_ep_air_time.py  b0b0e34060ab_disable_autoincrement.py  b3fa9ca3f960_init.py
requirements/: dev.in  dev.txt  prod.in  prod.txt  spider.in  spider.txt
scripts/: build-require.sh  build_docs.py  init_db.py  initdb.sh  install_python_with_pyenv.sh  lint.sh
test/: 考试安排request..js  考试安排response.js
tests/: conftest.py
tests/app/: conftest.py  not_test_worker.py  test_base_router.py  test_depends.py  test_logger.py  test_md_2_bbc.py  test_middlewares_base.py  test_worker.py
tests/etc/: test_gunicorn_conf.py
tests/mock_aiohttp/: app.py
tests_data/: dump.sql  relation.sql  subject.sql  tag.sql
utils/: calendar.py
video_website_spider/: bilibili.py
(+66 files in other folders)
