[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pol"
version = "0.2.18"
description = ""
authors = ["Trim21 <i@trim21.me>"]

[tool.poetry.dependencies]
python = "3.7.*"
# dependencies
aioredis = "1.3.1"
email-validator = "==1.1.1"
fastapi = "==0.58.1"
gunicorn = "20.0.4"
lxml = "==4.5.1"
pydantic = "1.5.1"
python-dateutil = "2.8.1"
python-multipart = "0.0.5"
pytz = "2020.1"
sentry-sdk = "==0.16.0"
uvicorn = "0.11.5"
beautifulsoup4 = "==4.9.1"
requests = "==2.24.0"
aiohttp = { version = "3.6.2", extras = ["speedups"] }
databases = { version = "0.3.2", extras = ["mysql"] }
alembic = "1.4.2"
aiomysql = '0.0.20'
aiologger = "0.5.0"
orjson = "==3.2.1"

[tool.poetry.dev-dependencies]
redis = "==3.5.3"
# tests
coverage = "^5.1"
pytest = "==5.4.3"
pytest-asyncio = "==0.14.0"
asynctest = "0.13.0"
pytest-rerunfailures = "9.0"
aioresponses = "==0.6.4"
# linter and formatter
pre-commit = "==2.6.0"
flake8 = '==3.8.3'
flake8-comprehensions = "==3.2.3"
flake8-bugbear = "20.1.4"
flake8-commas = "2.0.0"
flake8-mutable = "1.2.0"
flake8-broken-line = "==0.2.1"
flake8-pytest-style = "==1.2.1"
mypy = "==0.782"

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'if TYPE_CHECKING:',
  'if __name__ == "__main__":'
]
