[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pol"
version = "0.2.21"
description = ""
authors = ["Trim21 <i@trim21.me>"]

[tool.poetry.dependencies]
python = "3.8.*"
# dependencies
aioredis = "1.3.1"
email-validator = "==1.1.1"
fastapi = "==0.60.1"
gunicorn = "20.0.4"
lxml = "==4.5.2"
pydantic = "==1.6.1"
python-dateutil = "2.8.1"
python-multipart = "0.0.5"
pytz = "2020.1"
sentry-sdk = "==0.16.2"
uvicorn = "==0.11.7"
beautifulsoup4 = "==4.9.1"
requests = "==2.24.0"
aiohttp = { version = "3.6.2", extras = ["speedups"] }
databases = { version = "0.3.2", extras = ["mysql"] }
alembic = "1.4.2"
aiomysql = '0.0.20'
aiologger = "0.5.0"
orjson = "==3.3.0"

[tool.poetry.dev-dependencies]
redis = "==3.5.3"
# tests
coverage = "==5.3"
pytest = "==6.1.2"
pytest-asyncio = "==0.14.0"
asynctest = "0.13.0"
pytest-rerunfailures = "==9.1.1"
aioresponses = "==0.7.1"
# linter and formatter
pre-commit = "==2.8.1"
flake8 = '==3.8.4'
flake8-comprehensions = "==3.3.0"
flake8-bugbear = "20.1.4"
flake8-commas = "2.0.0"
flake8-mutable = "1.2.0"
flake8-broken-line = "==0.3.0"
flake8-pytest-style = "==1.3.0"
mypy = "==0.790"

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'if TYPE_CHECKING:',
  'if __name__ == "__main__":'
]

[tool.pytest.ini_options]
addopts = '-ra -q --reruns-delay 1'
junit_family = 'legacy'
