[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pol"
version = "0.2.21"
description = ""
authors = ["Trim21 <i@trim21.me>"]

[tool.poetry.dependencies]
python = "3.8.*"
# dependencies
aioredis = "1.3.1"
email-validator = "==1.1.2"
fastapi = "==0.63.0"
gunicorn = "20.0.4"
lxml = "==4.6.2"
pydantic = "==1.7.3"
python-dateutil = "2.8.1"
python-multipart = "0.0.5"
pytz = "==2021.1"
sentry-sdk = "==0.19.5"
uvicorn = "==0.13.3"
beautifulsoup4 = "==4.9.3"
requests = "==2.25.1"
aiohttp = { version = "==3.7.3", extras = ["speedups"] }
databases = { version = "==0.4.1", extras = ["mysql"] }
alembic = "==1.5.4"
aiomysql = '==0.0.21'
aiologger = "==0.6.0"
orjson = "==3.4.8"

[tool.poetry.dev-dependencies]
redis = "==3.5.3"
# tests
coverage = "==5.3"
pytest = "==6.1.2"
pytest-asyncio = "==0.14.0"
asynctest = "0.13.0"
pytest-rerunfailures = "==9.1.1"
aioresponses = "==0.7.1"
# linter and formatter
pre-commit = "==2.8.2"
flake8 = '==3.8.4'
flake8-comprehensions = "==3.3.0"
flake8-bugbear = "20.1.4"
flake8-commas = "2.0.0"
flake8-mutable = "1.2.0"
flake8-broken-line = "==0.3.0"
flake8-pytest-style = "==1.3.0"
mypy = "==0.790"

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'if TYPE_CHECKING:',
  'if __name__ == "__main__":'
]

[tool.pytest.ini_options]
addopts = '-ra -q --reruns-delay 1'
junit_family = 'legacy'
